--- a/styles/scss/abstracts/_variables.scss
+++ b/styles/scss/abstracts/_variables.scss
@@ -1,5 +1,6 @@
 // Color
-
+$nt-primary: #091540;
+$nt-light: #F8F7F9;
 
 // Reset
 $font-size-base: 1.6rem;
@@ -68,7 +69,7 @@ $btn-close-focus-opacity: 1;
 $modal-header-border-width: 0;
 
 // Loader
-//$primary-loader: $ad-primary;
+//$primary-loader: $nt-primary;
 $spinner-width: 4.5rem;
 $spinner-height: $spinner-width;
 
