--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -37,6 +37,11 @@
 
 @import "components/container";
 @import "components/button";
+@import "components/input";
+@import "components/spinner";
 @import "components/list";
 @import "components/modal";
+@import "components/ckeditor";
 @import "components/page-builder";
+
+@import "components/welcome";
