--- a/styles/scss/components/_input.scss
+++ b/styles/scss/components/_input.scss
@@ -15,18 +15,26 @@
             }
 
             &:before {
-                top: .5rem;
+                top: .3rem;
                 left: 0;
                 width: 1.8rem;
                 height: 1.8rem;
+
+                @include media-breakpoint-up(md) {
+                    top: .5rem;
+                }
             }
 
             &:after {
-                top: .8rem;
+                top: .6rem;
                 left: .3rem;
                 width: 1.2rem;
                 height: 1.2rem;
                 background-color: $nt-primary;
+
+                @include media-breakpoint-up(md) {
+                    top: .8rem;
+                }
             }
         }
 
