--- a/styles/scss/abstracts/_variables.scss
+++ b/styles/scss/abstracts/_variables.scss
@@ -80,3 +80,17 @@ $heading-gradient-duration: 8;
 
 // Carousel
 $carousel-experiment-time: 4.3s;
+
+// Menu Toggle
+$menu-toggle-height: 1.4rem;
+
+// Menu List Items
+$menu-list-items: 4;
+
+// Modal
+$modal-content-bg: $nt-light;
+
+// Offcanvas
+$offcanvas-padding-x: 0;
+$offcanvas-horizontal-width: 100vw;
+$offcanvas-border-width: 0;
