--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -41,6 +41,7 @@
 @import "components/spinner";
 @import "components/list";
 @import "components/modal";
+@import "components/offcanvas";
 @import "components/ckeditor";
 @import "components/page-builder";
 
