--- a/styles/scss/components/_ckeditor.scss
+++ b/styles/scss/components/_ckeditor.scss
@@ -1,5 +1,6 @@
 .ckeditor {
     .ck-editor__editable_inline {
+        min-height: 30rem;
         max-height: 30rem;
         overflow: auto;
     }
